# img_tag_system

./: .gitignore  README.md  conftest.py  pyproject.toml
backend/: README.md  pyproject.toml  requirements.txt
backend/scripts/: setup.sh
backend/src/application/: image_loader.py
backend/src/application/service/: image_deduplication.py  image_metadata_extractor.py
backend/src/application/storage/: client.py  ports.py
backend/src/application/usecases/: register_new_image.py
backend/src/common/: path_utils.py
backend/src/common/concurrency/: parallel.py
backend/src/common/decorators/: chunk_processor.py
backend/src/common/path/: project.py
backend/src/domain/entities/: images.py  model_tag.py
backend/src/interface/: config.py
scripts/: setup.sh
src/: config.py  exceptions.py  run.sh
src/application/: exceptions.py
src/application/config/: __init__.py  app_config.py  factory.py
src/application/configs/: __init__.py  app.py  database.py  repository.py  storage.py  tagger.py  utils.py
src/application/inference/: camie_v2.py  tagger.py
src/application/repositories/: debugging.py  images.py
src/application/service/: image_metadata_extractor.py  new_image_register.py  upsert_tags.py
src/application/system/: __init__.py  factory.py  registries.py
src/application/usecase/: new_image_register.py
src/application/usecases/: new_image_register.py  register_new_image.py
src/common/: exceptions.py  image_loader.py
src/domain/: exceptions.py  model_name.py
src/domain/entities/: images.py  model_tag.py
src/domain/repositories/: images.py  model_tag.py  unit_of_work.py
src/domain/services/: image_loader.py  image_metadata_extractor.py  tagging_result_classifier.py  tagging_result_filter.py
src/domain/tagger/: result.py  tagger.py
src/domain/value_objects/: file_location.py  image_hash.py  image_size.py
src/infrastructure/: exceptions.py  registries.py
src/infrastructure/composition/: enums.py  runtime_config.py  runtime_factory.py
src/infrastructure/configs/: storage.py  tagger.py
src/infrastructure/database/: init_db.py  schema.sql
src/infrastructure/registry/: adapter.py  config.py  core.py
src/infrastructure/repositories/: unit_of_work.py
src/infrastructure/services/: __init__.py  image_loader.py  parallel_executor.py
src/infrastructure/storage/: local_file_system.py
src/infrastructure/tagger/: camie_v2.py
src/interface/: config.py
src/interface/cli/: show_db.py
tests/src/inference/: test_tagging.py
(+50 files in other folders)
